--- a/app/admin.html
+++ b/app/admin.html
@@ -91,12 +91,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
               <a data-route="a-add-docent" href="/aaddd">
                 <iron-icon icon="social:person-add"></iron-icon>
-                <span>Dozenten erstellen</span>
+                <span>New Docent</span>
               </a>
 
               <a data-route="a-manage-docent" href="/amanaged">
                 <iron-icon icon="social:group"></iron-icon>
-                <span>Dozenten verwalten</span>
+                <span>Manage Docents</span>
               </a>
               </hr>
               <a data-route="a-create-room" href="/acreater">
@@ -115,7 +115,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
               <a data-route="a-manage-appointments" href="/amanagea">
                 <iron-icon icon="icons:today"></iron-icon>
-                <span>Manage Appointments
+                <span>Create Timeslots
                   <span>
               </a>
 
