--- a/app/admin.html
+++ b/app/admin.html
@@ -222,7 +222,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </template>
             </section>
             <section data-route="a-manage-docent">
-              <template is="dom-if" if="{{isEqual(route, 'a-manage-appointments')}}" restamp="true">
+              <template is="dom-if" if="{{isEqual(route, 'a-manage-docent')}}" restamp="true">
                 <docent-list-edit></docent-list-edit>
               </template>
             </section>
